--- a/docs/style.css
+++ b/docs/style.css
@@ -28,8 +28,6 @@ h1 {
     touch-action: none; 
     overflow: hidden;
     border-radius: 8px;
-    border: 1px solid #ccc;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 #goes-image {
@@ -38,7 +36,9 @@ h1 {
     height: auto;
     width: auto;
     display: none;
-    border-radius: 0;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     position: relative; 
     z-index: 1;
 }
